--- a/portfolio.css
+++ b/portfolio.css
@@ -9,7 +9,7 @@ body, html {
 	cursor:url(test.png);
 }
 html { 
-  background: url(backg.jpg) no-repeat center center fixed; 
+  background: url(backg.JPG) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
